# sign_language_backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test_ws.py
ml/sign_language_model/: .gitignore  __init__.py  main.py  process_lsc70_images.py  pyproject.toml  sign_recorder.py  webcam_manager.py
ml/sign_language_model/data/alphabet_fingerspelling/: folder_paths.csv
ml/sign_language_model/data/dataset/ANNOS/: lh_ANNOS_Per01.pickle  lh_ANNOS_Per02.pickle  lh_ANNOS_Per03.pickle  lh_ANNOS_Per04.pickle  lh_ANNOS_Per05.pickle  lh_ANNOS_Per06.pickle  lh_ANNOS_Per07.pickle  lh_ANNOS_Per08.pickle  lh_ANNOS_Per09.pickle  lh_ANNOS_Per10.pickle  lh_ANNOS_Per11.pickle  lh_ANNOS_Per12.pickle  lh_ANNOS_Per13.pickle  lh_ANNOS_Per14.pickle  lh_ANNOS_Per15.pickle  lh_ANNOS_Per16.pickle  lh_ANNOS_Per17.pickle  lh_ANNOS_Per18.pickle  lh_ANNOS_Per19.pickle  lh_ANNOS_Per20.pickle  lh_ANNOS_Per21.pickle  lh_ANNOS_Per22.pickle  lh_ANNOS_Per23.pickle  lh_ANNOS_Per24.pickle  lh_ANNOS_Per25.pickle  lh_ANNOS_Per26.pickle  lh_ANNOS_Per27.pickle  lh_ANNOS_Per28.pickle  lh_ANNOS_Per29.pickle  lh_ANNOS_Per30.pickle  lh_ANNOS_Per31.pickle  lh_ANNOS_Per32.pickle  lh_ANNOS_Per33.pickle  lh_ANNOS_Per34.pickle  (+106 more)
ml/sign_language_model/models/: __init__.py  hand_model.py  pose_model.py  sign_model.py
ml/sign_language_model/models/core/: __init__.py  hand_model.py  pose_model.py  sign_model.py
ml/sign_language_model/models/mediapipe/: __init__.py  hand_detector.py  holistic_detector.py  pose_detector.py
ml/sign_language_model/models/recognizers/: __init__.py  fingerspelling_model.py  handshape_model.py
ml/sign_language_model/models/yolo/: __init__.py  hand_detector.py  object_detector.py
ml/sign_language_model/scripts/: build_fingerspelling_templates.py  extract_dataset5.py  extract_fingerspelling_landmarks.py  extract_landmarks_by_letter.py  process_other_datasets.py  train_fingerspelling_from_csv.py  train_fingerspelling_kaggle.py  train_fingerspelling_model.py  train_fingerspelling_sklearn.py  train_from_alphabet.py  train_from_archive.py  train_handshape_from_csv.py  train_handshape_model.py  train_kaggle_supplemental.py
ml/sign_language_model/utils/: dataset_lsc70_utils.py  dataset_utils.py  dtw.py  landmark_utils.py  mediapipe_utils.py
(+6657 files in other folders)
