[project]
name = "lsc-translator-backend"
version = "0.1.0"
description = "Colombian Sign Language (LSC) Translation Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.1",
    "mediapipe>=0.10.32",
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.0",
    "google-cloud-storage>=2.14.0",
    "google-auth>=2.27.0",
    "gtts>=2.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "httpx>=0.26.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "fastdtw>=0.2.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "cv2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.1.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]
