[project]
name = "sign-language-recognition"
version = "0.1.0"
description = "Sign Language Recognition using MediaPipe and DTW"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false
